# spectur

./: .gitignore  README.md  package.json
.commandcode/taste/: taste.md
backend/: Cargo.toml  README.md
backend/src/: analyzer.rs  lib.rs  main.rs  spawner.rs  types.rs  ui.rs  ws.rs
extension/: package.json  tsconfig.json  wxt.config.ts
extension/entrypoints/: background.ts  content.ts  overlay.content.ts
extension/overlay/: detector.ts  geometry.ts  ui.ts
