[package]
name = "spectur-backend"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-tungstenite = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = { version = "0.30.1", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["events"] }
m3u8-rs = "6.0"
dash-mpd = "0.20.3"
wreq = { version = "6.0.0-rc.29", features = ["gzip", "brotli", "zstd", "deflate", "stream"] }
wreq-util = "3.0.0-rc.12"
regex = "1.10"
futures-util = "0.3"
url = "2.5"
mp4 = "0.14"
arboard = "3.4"
